<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:id="@+id/width_select_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/width_change_for_custom_level"
            android:gravity="center"
            android:layout_weight="1"
            style="@style/custom_level_text"/>

        <SeekBar
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="@style/custom_level"
            android:layout_weight="1"
            android:id="@+id/width_seekBar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            style="@style/custom_level"
            android:layout_weight="2"
            android:text="10"
            android:textSize="10sp"
            android:id="@+id/width_tv"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:id="@+id/height_select_layout"
        android:layout_below="@id/width_select_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/height_change_for_custom_level"
            android:gravity="center"
            android:layout_weight="1"
            style="@style/custom_level_text"/>

        <SeekBar
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="@style/custom_level"
            android:layout_weight="1"
            android:id="@+id/height_seekBar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            style="@style/custom_level"
            android:layout_weight="2"
            android:text="10"
            android:textSize="10sp"
            android:id="@+id/height_tv"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:id="@+id/mines_select_layout"
        android:layout_below="@id/height_select_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mines_change_for_cusom_level"
            android:gravity="center"
            android:layout_weight="1"
            style="@style/custom_level_text"/>

        <SeekBar
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="@style/custom_level"
            android:layout_weight="1"
            android:id="@+id/mines_seekBar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            style="@style/custom_level"
            android:layout_weight="2"
            android:text="10"
            android:textSize="10sp"
            android:id="@+id/mines_tv"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:id="@+id/btns_custom_layout"
        android:layout_below="@id/mines_select_layout"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finish_select_custom_level_btn"
            android:text="@string/finish_select_custom_level_btn"
            style="@style/level"
            android:layout_below="@id/mines_select_layout"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_select_custom_level_btn"
            android:text="@string/cancel_select_custom_level_btn"
            style="@style/level"/>




    </LinearLayout>


</RelativeLayout>