<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsActivity"
    android:background="@drawable/background1">

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_settings_black_24dp"
        android:id="@+id/settings_IB"
        android:layout_margin="10dp"/>

    <!--<ImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:src="@drawable/winner_person3"-->
    <!--android:id="@+id/pic_person"-->
    <!--/>-->


    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/title_activity_statistics"-->
    <!--android:layout_margin="10dp"-->
    <!--android:textSize="50dp"-->
    <!--android:id="@+id/statistics_title"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_below="@id/pic_person"/>-->

    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/statistics_image"
        android:id="@+id/statistics_image"/>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:id="@+id/total_games_layout"
        android:layout_below="@id/statistics_image"
        android:background="@drawable/statistics_shape">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_games_Tv"
            android:text="@string/total_games"
            android:layout_gravity="center"
            style="@style/statistic_text_view"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_games_numberTv"
            style="@style/statistic_text_view"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/wins_times_layout"
        android:background="@drawable/statistics_shape"
        android:layout_below="@+id/total_games_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/games_won_Tv"
            android:text="@string/games_won"
            style="@style/statistic_text_view"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/games_won_numberTv"
            style="@style/statistic_text_view"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/wins_times_layout">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/one_place"
            android:layout_gravity="center"
            android:id="@+id/one_place_image"
            android:layout_below="@id/wins_times_layout"/>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/statistics_shape"
            android:id="@+id/best_score_layout"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/best_score_Tv"
                android:text="@string/best_score_text_view_when_win"
                style="@style/statistic_text_view"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/best_score_numberTv"
                style="@style/statistic_text_view"
                />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>